--- a/manifest.plist
+++ b/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://www.dropbox.com/s/b7wwc95ti9tvcrm/mimc-fm.ipa?dl=1</string>
+					<string>https://https://vitaly26.github.io/adhoc/mimc-fm.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://www.dropbox.com/s/usst8e8qsomwfsj/icon.png?dl=1</string>
+					<string>https://https://vitaly26.github.io/adhoc/icon.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://www.dropbox.com/s/usst8e8qsomwfsj/icon.png?dl=1</string>
+					<string>https://https://vitaly26.github.io/adhoc/icon.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
