--- a/apps/inventory/manifest.plist
+++ b/apps/inventory/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://https://vitaly26.github.io/adhoc/apps/inventory/app.ipa</string>
+					<string>https://vitaly26.github.io/adhoc/apps/inventory/app.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://https://vitaly26.github.io/adhoc/apps/inventory/icon.png</string>
+					<string>https://vitaly26.github.io/adhoc/apps/inventory/icon.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://https://vitaly26.github.io/adhoc/apps/inventory/icon.png</string>
+					<string>https://vitaly26.github.io/adhoc/apps/inventory/icon.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
